log/build_2025-09-18_22-18-30/ros2_zhongli_bridge_cpp/stderr.log
In file included from /opt/ros/humble/include/rclcpp/rclcpp/logging.hpp:24,
                 from /opt/ros/humble/include/rclcpp/rclcpp/client.hpp:40,
                 from /opt/ros/humble/include/rclcpp/rclcpp/callback_group.hpp:24,
                 from /opt/ros/humble/include/rclcpp/rclcpp/any_executable.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategy.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor_options.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor.hpp:37,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors/multi_threaded_executor.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors.hpp:21,
                 from /opt/ros/humble/include/rclcpp/rclcpp/rclcpp.hpp:155,
                 from /home/yhg/Documents/docs/zhongli/cpp_version/src/include/ros2_zhongli_bridge.hpp:3,
                 from /home/yhg/Documents/docs/zhongli/cpp_version/src/lib/ros2_zhongli_bridge.cpp:1:
/home/yhg/Documents/docs/zhongli/cpp_version/src/lib/ros2_zhongli_bridge.cpp: In member function ‘bool zhongli_bridge::ROS2ZhongliBridge::initialize()’:
/home/yhg/Documents/docs/zhongli/cpp_version/src/lib/ros2_zhongli_bridge.cpp:30:41: warning: zero-length gnu_printf format string [-Wformat-zero-length]
   30 |         RCLCPP_INFO(this->get_logger(), "");
      |                                         ^~
/home/yhg/Documents/docs/zhongli/cpp_version/src/lib/ros2_zhongli_bridge.cpp:41:41: warning: zero-length gnu_printf format string [-Wformat-zero-length]
   41 |         RCLCPP_INFO(this->get_logger(), "");
      |                                         ^~
/home/yhg/Documents/docs/zhongli/cpp_version/src/lib/ros2_zhongli_bridge.cpp: In member function ‘void zhongli_bridge::ROS2ZhongliBridge::publish_navigation_status(const zhongli_protocol::TrajectoryStatusMessage&)’:
/home/yhg/Documents/docs/zhongli/cpp_version/src/lib/ros2_zhongli_bridge.cpp:362:21: error: ‘struct action_msgs::msg::GoalStatus_<std::allocator<void> >’ has no member named ‘text’
  362 |         goal_status.text = "Navigation failed: " + status_msg.errorDesc + " (Error code: " + std::to_string(status_msg.errorCode) + ")";
      |                     ^~~~
/home/yhg/Documents/docs/zhongli/cpp_version/src/lib/ros2_zhongli_bridge.cpp:364:21: error: ‘struct action_msgs::msg::GoalStatus_<std::allocator<void> >’ has no member named ‘text’
  364 |         goal_status.text = "Navigation " + status_msg.status;
      |                     ^~~~
/home/yhg/Documents/docs/zhongli/cpp_version/src/lib/ros2_zhongli_bridge.cpp:366:25: error: ‘struct action_msgs::msg::GoalStatus_<std::allocator<void> >’ has no member named ‘text’
  366 |             goal_status.text += " - Point " + std::to_string(status_msg.currentPointIndex.value());
      |                         ^~~~
In file included from /opt/ros/humble/include/rclcpp/rclcpp/logging.hpp:24,
                 from /opt/ros/humble/include/rclcpp/rclcpp/client.hpp:40,
                 from /opt/ros/humble/include/rclcpp/rclcpp/callback_group.hpp:24,
                 from /opt/ros/humble/include/rclcpp/rclcpp/any_executable.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategy.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor_options.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor.hpp:37,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors/multi_threaded_executor.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors.hpp:21,
                 from /opt/ros/humble/include/rclcpp/rclcpp/rclcpp.hpp:155,
                 from /home/yhg/Documents/docs/zhongli/cpp_version/src/include/ros2_zhongli_bridge.hpp:3,
                 from /home/yhg/Documents/docs/zhongli/cpp_version/src/lib/ros2_zhongli_bridge.cpp:1:
/home/yhg/Documents/docs/zhongli/cpp_version/src/lib/ros2_zhongli_bridge.cpp:373:62: error: ‘struct action_msgs::msg::GoalStatus_<std::allocator<void> >’ has no member named ‘text’
  373 |                 status_msg.trajectoryId.c_str(), goal_status.text.c_str());
      |                                                              ^~~~
gmake[2]: *** [src/lib/CMakeFiles/ros2_zhongli_bridge.dir/build.make:76: src/lib/CMakeFiles/ros2_zhongli_bridge.dir/ros2_zhongli_bridge.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:257: src/lib/CMakeFiles/ros2_zhongli_bridge.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
